[tool.poetry]
name = "starter"
version = "0.1.0"
description = "A small example web application, deployable to Kubernetes"
authors = ["Ally Weir"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.16.0"
starlette-prometheus = "^0.7.0"
uvicorn = "^0.14.0"
prometheus-client = "0.7.1"
marshmallow = "^3.13.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
